--- a/DirectX12CG/DirectX12CG.vcxproj.filters
+++ b/DirectX12CG/DirectX12CG.vcxproj.filters
@@ -148,6 +148,12 @@
     <Filter Include="ヘッダー ファイル\Engin\Util">
       <UniqueIdentifier>{8a4651f9-15fc-4828-bda6-7022e24c09b6}</UniqueIdentifier>
     </Filter>
+    <Filter Include="ヘッダー ファイル\Engin\Camera">
+      <UniqueIdentifier>{66cc4006-06ce-4a3c-b13f-036b8ae6591e}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="ソース ファイル\Engin\Camera">
+      <UniqueIdentifier>{b9826976-6396-4238-8b47-efebfe4300f1}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -299,6 +305,18 @@
     </ClCompile>
     <ClCompile Include="Util.cpp">
       <Filter>ソース ファイル\Engin\Util</Filter>
+    </ClCompile>
+    <ClCompile Include="ICamera.cpp">
+      <Filter>ソース ファイル\Engin\Camera</Filter>
+    </ClCompile>
+    <ClCompile Include="DebugCamera.cpp">
+      <Filter>ソース ファイル\Engin\Camera</Filter>
+    </ClCompile>
+    <ClCompile Include="Camera.cpp">
+      <Filter>ソース ファイル\Engin\Camera</Filter>
+    </ClCompile>
+    <ClCompile Include="Vecter2D.cpp">
+      <Filter>ソース ファイル\Engin\Math\Vector</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -477,6 +495,18 @@
     </ClInclude>
     <ClInclude Include="FPS.h">
       <Filter>ヘッダー ファイル\Engin\Util</Filter>
+    </ClInclude>
+    <ClInclude Include="Camera.h">
+      <Filter>ヘッダー ファイル\Engin\Camera</Filter>
+    </ClInclude>
+    <ClInclude Include="DebugCamera.h">
+      <Filter>ヘッダー ファイル\Engin\Camera</Filter>
+    </ClInclude>
+    <ClInclude Include="ICamera.h">
+      <Filter>ヘッダー ファイル\Engin\Camera</Filter>
+    </ClInclude>
+    <ClInclude Include="Vecter2D.h">
+      <Filter>ヘッダー ファイル\Engin\Math\Vector</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
