画像描画がバグってる

--- a/DirectX12CG/imgui.ini
+++ b/DirectX12CG/imgui.ini
@@ -4,7 +4,12 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=853,24
+Pos=852,24
 Size=550,680
+Collapsed=0
+
+[Window][Example: Console]
+Pos=59,61
+Size=520,600
 Collapsed=0
 
