--- a/DirectX12CG/DirectX12CG.vcxproj.filters
+++ b/DirectX12CG/DirectX12CG.vcxproj.filters
@@ -5,10 +5,6 @@
       <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
       <Extensions>cpp;c;cc;cxx;c++;cppm;ixx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
     </Filter>
-    <Filter Include="ヘッダー ファイル">
-      <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
-      <Extensions>h;hh;hpp;hxx;h++;hm;inl;inc;ipp;xsd</Extensions>
-    </Filter>
     <Filter Include="リソース ファイル">
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
@@ -70,6 +66,40 @@
     <Filter Include="ソース ファイル\Engin\3D">
       <UniqueIdentifier>{eb6ba388-9701-4e70-b923-48144367fc89}</UniqueIdentifier>
     </Filter>
+    <Filter Include="ソース ファイル\Game">
+      <UniqueIdentifier>{5b01ddb0-0d69-4f0c-88e3-5984c0578527}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="ソース ファイル\Scene">
+      <UniqueIdentifier>{966289f4-4e0f-4afd-bad8-65a72c07dd0b}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="ソース ファイル\Engin\Light">
+      <UniqueIdentifier>{5971f4fb-497d-4141-9618-22794fb80932}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="リソース ファイル\BasicShader">
+      <UniqueIdentifier>{6c143c2c-1c7c-48b7-b975-2a3e196d6cdd}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="リソース ファイル\BasicShader\PixelShader">
+      <UniqueIdentifier>{060f4353-5dfb-44c4-b1e2-b96183f34f77}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="リソース ファイル\BasicShader\GeometoryShader">
+      <UniqueIdentifier>{eb50deca-a9aa-4027-b35c-5ce823a5136c}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="リソース ファイル\BasicShader\VertexShader">
+      <UniqueIdentifier>{de84811d-e66c-4849-a6ff-bca3be5f796f}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="リソース ファイル\BasicShader\ShaderHeader">
+      <UniqueIdentifier>{221cc362-ce73-4b12-b724-3af9f026f791}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="ソース ファイル\Engin\Util">
+      <UniqueIdentifier>{5c61fd7e-839e-4826-988a-362178ba54e9}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="ソース ファイル\Engin\Camera">
+      <UniqueIdentifier>{b9826976-6396-4238-8b47-efebfe4300f1}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="ヘッダー ファイル">
+      <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
+      <Extensions>h;hh;hpp;hxx;h++;hm;inl;inc;ipp;xsd</Extensions>
+    </Filter>
     <Filter Include="ヘッダー ファイル\Engin">
       <UniqueIdentifier>{256e957f-f10c-45d6-94bc-b14af46af5b7}</UniqueIdentifier>
     </Filter>
@@ -109,41 +139,8 @@
     <Filter Include="ヘッダー ファイル\Engin\3D">
       <UniqueIdentifier>{82d29c91-4bed-4af8-99fe-360042030ac8}</UniqueIdentifier>
     </Filter>
-    <Filter Include="ソース ファイル\Game">
-      <UniqueIdentifier>{5b01ddb0-0d69-4f0c-88e3-5984c0578527}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="ヘッダー ファイル\Game">
-      <UniqueIdentifier>{ced38064-c65b-4f3f-b68d-42290caade83}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="ソース ファイル\Scene">
-      <UniqueIdentifier>{966289f4-4e0f-4afd-bad8-65a72c07dd0b}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="ヘッダー ファイル\Scene">
-      <UniqueIdentifier>{9626c07b-d810-4c3a-a52f-1f3eb218727d}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="ソース ファイル\Engin\Light">
-      <UniqueIdentifier>{5971f4fb-497d-4141-9618-22794fb80932}</UniqueIdentifier>
-    </Filter>
     <Filter Include="ヘッダー ファイル\Engin\Light">
       <UniqueIdentifier>{2c8a91e2-59a7-4813-ba8a-ee7c5fd55405}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="リソース ファイル\BasicShader">
-      <UniqueIdentifier>{6c143c2c-1c7c-48b7-b975-2a3e196d6cdd}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="リソース ファイル\BasicShader\PixelShader">
-      <UniqueIdentifier>{060f4353-5dfb-44c4-b1e2-b96183f34f77}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="リソース ファイル\BasicShader\GeometoryShader">
-      <UniqueIdentifier>{eb50deca-a9aa-4027-b35c-5ce823a5136c}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="リソース ファイル\BasicShader\VertexShader">
-      <UniqueIdentifier>{de84811d-e66c-4849-a6ff-bca3be5f796f}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="リソース ファイル\BasicShader\ShaderHeader">
-      <UniqueIdentifier>{221cc362-ce73-4b12-b724-3af9f026f791}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="ソース ファイル\Engin\Util">
-      <UniqueIdentifier>{5c61fd7e-839e-4826-988a-362178ba54e9}</UniqueIdentifier>
     </Filter>
     <Filter Include="ヘッダー ファイル\Engin\Util">
       <UniqueIdentifier>{8a4651f9-15fc-4828-bda6-7022e24c09b6}</UniqueIdentifier>
@@ -151,8 +148,11 @@
     <Filter Include="ヘッダー ファイル\Engin\Camera">
       <UniqueIdentifier>{66cc4006-06ce-4a3c-b13f-036b8ae6591e}</UniqueIdentifier>
     </Filter>
-    <Filter Include="ソース ファイル\Engin\Camera">
-      <UniqueIdentifier>{b9826976-6396-4238-8b47-efebfe4300f1}</UniqueIdentifier>
+    <Filter Include="ヘッダー ファイル\Game">
+      <UniqueIdentifier>{ced38064-c65b-4f3f-b68d-42290caade83}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="ヘッダー ファイル\Scene">
+      <UniqueIdentifier>{9626c07b-d810-4c3a-a52f-1f3eb218727d}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -317,6 +317,9 @@
     </ClCompile>
     <ClCompile Include="Vecter2D.cpp">
       <Filter>ソース ファイル\Engin\Math\Vector</Filter>
+    </ClCompile>
+    <ClCompile Include="TextureManager.cpp">
+      <Filter>ソース ファイル\Engin\Texture</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -507,6 +510,9 @@
     </ClInclude>
     <ClInclude Include="Vecter2D.h">
       <Filter>ヘッダー ファイル\Engin\Math\Vector</Filter>
+    </ClInclude>
+    <ClInclude Include="TextureManager.h">
+      <Filter>ヘッダー ファイル\Engin\Texture</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
