--- a/DirectX12CG/DirectX12CG.vcxproj
+++ b/DirectX12CG/DirectX12CG.vcxproj
@@ -77,6 +77,7 @@
     <ClCompile Include="Engin\Collide\PlaneCollider.cpp" />
     <ClCompile Include="Engin\Collide\RayCollider.cpp" />
     <ClCompile Include="Engin\Collide\TriangleCollider.cpp" />
+    <ClCompile Include="Engin\Collide\RayCastHit.cpp" />
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="Resources\Shaders\FbxShader\FbxGeometryShader.hlsl">
@@ -211,6 +212,7 @@
     <ClInclude Include="Engin\Collide\PlaneCollider.h" />
     <ClInclude Include="Engin\Collide\RayCollider.h" />
     <ClInclude Include="Engin\Collide\TriangleCollider.h" />
+    <ClInclude Include="Engin\Collide\RayCastHit.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\Shaders\FbxShader\FbxShaderHeader.hlsli" />
