--- a/DirectX12CG/DirectX12CG.vcxproj.filters
+++ b/DirectX12CG/DirectX12CG.vcxproj.filters
@@ -366,6 +366,9 @@
     <ClCompile Include="Engin\Collide\RayCastHit.cpp">
       <Filter>ソース ファイル\Engin\3D</Filter>
     </ClCompile>
+    <ClCompile Include="Engin\Collide\MeshCollider.cpp">
+      <Filter>ソース ファイル\Engin\3D</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="Resources\Shaders\ParticleShader\ParticleGeometryShader.hlsl">
@@ -596,6 +599,9 @@
       <Filter>ヘッダー ファイル\Engin\3D</Filter>
     </ClInclude>
     <ClInclude Include="Engin\Collide\RayCastHit.h">
+      <Filter>ヘッダー ファイル\Engin\3D</Filter>
+    </ClInclude>
+    <ClInclude Include="Engin\Collide\MeshCollider.h">
       <Filter>ヘッダー ファイル\Engin\3D</Filter>
     </ClInclude>
   </ItemGroup>
