--- a/DirectX12CG/DirectX12CG.vcxproj
+++ b/DirectX12CG/DirectX12CG.vcxproj
@@ -79,6 +79,7 @@
     <ClCompile Include="Engin\Collide\TriangleCollider.cpp" />
     <ClCompile Include="Engin\Collide\RayCastHit.cpp" />
     <ClCompile Include="Engin\Collide\MeshCollider.cpp" />
+    <ClCompile Include="App\Player.cpp" />
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="Resources\Shaders\FbxShader\FbxGeometryShader.hlsl">
@@ -215,6 +216,7 @@
     <ClInclude Include="Engin\Collide\TriangleCollider.h" />
     <ClInclude Include="Engin\Collide\RayCastHit.h" />
     <ClInclude Include="Engin\Collide\MeshCollider.h" />
+    <ClInclude Include="App\Player.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\Shaders\FbxShader\FbxShaderHeader.hlsli" />
